# Linux-OpenSkyAPI-Project

./: CMakeLists.txt  Dockerfile.FlightsService  Dockerfile.dbService  Makefile  README.txt  dbService.out  dpts  flightService.out  lastFlightsScript.sh  main  openSkyAPI.cpp  printArrivals  printArrivals.cpp  printFlightsByAircraft  printFlightsByAircraft.cpp  printFlightsByTime  printFlightsByTime.cpp  setup.sh  test.sh  testscript.sh  updateDB  updateDB.cpp  utility.cpp  utility.h
flightsDB/: LLBG.dpt
flightsDB/EGLL/: EGLL.arv  EGLL.dpt
flightsDB/EHAM/: EHAM.arv  EHAM.dpt
flightsDB/KLAX/: KLAX.arv  KLAX.dpt
flightsDB/LLBG/: LLBG.arv  LLBG.dpt
src/: childProcessLogic.cpp  childProcessLogic.h  containerComunication.cpp  containerComunication.h  dbService.cpp  dbServiceLogic.cpp  dbServiceLogic.h  flightService.cpp  openSkyAPI.cpp  processComunication.cpp  processComunication.h  utility.cpp  utility.h
